# Fund-Algo

./: .gitignore
FirstPack/task1/: CMakeLists.txt  main.c
FirstPack/task1/include/: functions.h
FirstPack/task1/src/: functions.c
